--- a/ChallengeCountries/Base.lproj/Main.storyboard
+++ b/ChallengeCountries/Base.lproj/Main.storyboard
@@ -6,6 +6,9 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -22,29 +25,62 @@
                                 <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="CountryCell" textLabel="cI8-Gb-Kpy" detailTextLabel="tGa-fy-lBa" style="IBUITableViewCellStyleValue1" id="uiQ-30-iwn">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="CountryCell" rowHeight="200" id="uiQ-30-iwn" customClass="CountryCell" customModule="ChallengeCountries" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="200"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="uiQ-30-iwn" id="5fC-64-sXM">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="200"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="cI8-Gb-Kpy">
-                                                    <rect key="frame" x="15" y="12" width="33.5" height="20.5"/>
-                                                    <autoresizingMask key="autoresizingMask"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Detail" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="tGa-fy-lBa">
-                                                    <rect key="frame" x="316" y="12" width="44" height="20.5"/>
-                                                    <autoresizingMask key="autoresizingMask"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="LDd-uN-FKj">
+                                                    <rect key="frame" x="15" y="16" width="50" height="34"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="LDd-uN-FKj" secondAttribute="height" multiplier="50:34" id="9b3-6X-ZmU"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Je1-RJ-I9h">
+                                                    <rect key="frame" x="73" y="13.5" width="111" height="36.5"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Country Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Ay-LH-N1W">
+                                                            <rect key="frame" x="0.0" y="0.0" width="111" height="20.5"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Capital" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gu9-3R-Zgs">
+                                                            <rect key="frame" x="0.0" y="20.5" width="111" height="16"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                            <color key="textColor" red="0.12941176470588234" green="0.14901960784313725" blue="0.17254901960784313" alpha="1" colorSpace="calibratedRGB"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                </stackView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uK7-ea-1PI">
+                                                    <rect key="frame" x="15" y="58" width="289" height="18"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstItem="Je1-RJ-I9h" firstAttribute="leading" secondItem="LDd-uN-FKj" secondAttribute="trailing" constant="8" symbolic="YES" id="6p6-f0-Gmj"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="uK7-ea-1PI" secondAttribute="trailing" constant="1" id="9xH-fJ-6Pa"/>
+                                                <constraint firstItem="LDd-uN-FKj" firstAttribute="leading" secondItem="5fC-64-sXM" secondAttribute="leading" constant="15" id="BQG-WH-O8E"/>
+                                                <constraint firstItem="LDd-uN-FKj" firstAttribute="width" secondItem="5fC-64-sXM" secondAttribute="width" multiplier="50:320" id="MSS-qp-JBU"/>
+                                                <constraint firstItem="uK7-ea-1PI" firstAttribute="top" secondItem="LDd-uN-FKj" secondAttribute="bottom" constant="8" symbolic="YES" id="Yyv-VE-7yd"/>
+                                                <constraint firstItem="uK7-ea-1PI" firstAttribute="leading" secondItem="5fC-64-sXM" secondAttribute="leading" constant="15" id="efO-KJ-lZX"/>
+                                                <constraint firstItem="Je1-RJ-I9h" firstAttribute="bottom" secondItem="LDd-uN-FKj" secondAttribute="bottom" id="uLc-QO-iuc"/>
+                                                <constraint firstItem="LDd-uN-FKj" firstAttribute="top" secondItem="5fC-64-sXM" secondAttribute="top" constant="16" id="vkO-OW-l1C"/>
+                                            </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="capitalLabel" destination="gu9-3R-Zgs" id="j6c-eL-rG1"/>
+                                            <outlet property="descriptionLabel" destination="uK7-ea-1PI" id="6e1-dB-5dt"/>
+                                            <outlet property="flagImageView" destination="LDd-uN-FKj" id="K9X-Sj-Kuw"/>
+                                            <outlet property="imageBottomConstraint" destination="Yyv-VE-7yd" id="V4t-K2-Wr1"/>
+                                            <outlet property="imageTopConstaint" destination="vkO-OW-l1C" id="pEm-Qg-Evb"/>
+                                            <outlet property="nameLabel" destination="8Ay-LH-N1W" id="O2s-Ak-gdh"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                                 <connections>
@@ -53,7 +89,7 @@
                                 </connections>
                             </tableView>
                             <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="cLA-pN-Oxw">
-                                <rect key="frame" x="178" y="324" width="20" height="20"/>
+                                <rect key="frame" x="177.5" y="323.5" width="20" height="20"/>
                             </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -74,7 +110,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bbq-nT-3bk" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="531" y="-201"/>
+            <point key="canvasLocation" x="131" y="-311"/>
         </scene>
     </scenes>
 </document>
