change flag constraints

--- a/ChallengeCountries/Base.lproj/Main.storyboard
+++ b/ChallengeCountries/Base.lproj/Main.storyboard
@@ -6,9 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
-        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -35,7 +33,8 @@
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="LDd-uN-FKj">
                                                     <rect key="frame" x="15" y="16" width="50" height="34"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" secondItem="LDd-uN-FKj" secondAttribute="height" multiplier="50:34" id="9b3-6X-ZmU"/>
+                                                        <constraint firstAttribute="height" constant="34" id="nWc-De-TtY"/>
+                                                        <constraint firstAttribute="width" constant="50" id="o1Y-4Q-lW1"/>
                                                     </constraints>
                                                 </imageView>
                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Je1-RJ-I9h">
@@ -56,7 +55,7 @@
                                                     </subviews>
                                                 </stackView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uK7-ea-1PI">
-                                                    <rect key="frame" x="15" y="58" width="289" height="18"/>
+                                                    <rect key="frame" x="15" y="58" width="344" height="18"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -66,7 +65,6 @@
                                                 <constraint firstItem="Je1-RJ-I9h" firstAttribute="leading" secondItem="LDd-uN-FKj" secondAttribute="trailing" constant="8" symbolic="YES" id="6p6-f0-Gmj"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="uK7-ea-1PI" secondAttribute="trailing" constant="1" id="9xH-fJ-6Pa"/>
                                                 <constraint firstItem="LDd-uN-FKj" firstAttribute="leading" secondItem="5fC-64-sXM" secondAttribute="leading" constant="15" id="BQG-WH-O8E"/>
-                                                <constraint firstItem="LDd-uN-FKj" firstAttribute="width" secondItem="5fC-64-sXM" secondAttribute="width" multiplier="50:320" id="MSS-qp-JBU"/>
                                                 <constraint firstItem="uK7-ea-1PI" firstAttribute="top" secondItem="LDd-uN-FKj" secondAttribute="bottom" constant="8" symbolic="YES" id="Yyv-VE-7yd"/>
                                                 <constraint firstItem="uK7-ea-1PI" firstAttribute="leading" secondItem="5fC-64-sXM" secondAttribute="leading" constant="15" id="efO-KJ-lZX"/>
                                                 <constraint firstItem="Je1-RJ-I9h" firstAttribute="bottom" secondItem="LDd-uN-FKj" secondAttribute="bottom" id="uLc-QO-iuc"/>
@@ -77,8 +75,6 @@
                                             <outlet property="capitalLabel" destination="gu9-3R-Zgs" id="j6c-eL-rG1"/>
                                             <outlet property="descriptionLabel" destination="uK7-ea-1PI" id="6e1-dB-5dt"/>
                                             <outlet property="flagImageView" destination="LDd-uN-FKj" id="K9X-Sj-Kuw"/>
-                                            <outlet property="imageBottomConstraint" destination="Yyv-VE-7yd" id="V4t-K2-Wr1"/>
-                                            <outlet property="imageTopConstaint" destination="vkO-OW-l1C" id="pEm-Qg-Evb"/>
                                             <outlet property="nameLabel" destination="8Ay-LH-N1W" id="O2s-Ak-gdh"/>
                                         </connections>
                                     </tableViewCell>
